crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_092_JalecoJF19_Moero_Pro_Yakyuu_88_Ketteiban_J_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-092-JalecoJF19/Moero!! Pro Yakyuu '88 - Ketteiban (J) [!].zip
rom_sha256=c4a1b8c9e681c172aa646db083268cfa54ac76f43f8a0d5a93620668c957bbc6
frames=1141
fb_bytes=245760
cycles=33949779
audio_samples=836505
audio_fnv1a64=e500905e55ba2d0d
checkpoint f900 fb_fnv1a64=1c6ba38d8a65425f
checkpoint f1100 fb_fnv1a64=1c6ba38d8a65425f
